<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_activity"
  style="@style/second_activity_container"
    tools:context=".SecondActivity">

    <!--  The background container  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_background_container"
  style="@style/top_background_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--The background-->
        <ImageView
            android:id="@+id/decagon"
            style="@style/decagon_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    The profile datails -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_container"
        style="@style/profile_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/pointer"
            style="@style/pointer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        the name field-->
        <TextView
            android:id="@+id/getName"
            style="@style/getName"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--The email field-->
        <TextView
            android:id="@+id/getEmail"
            style="@style/getEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getName" />
        <!--The phone number field -->
        <TextView
            android:id="@+id/getPhoneNumber"
            style="@style/getPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getEmail" />
        <!--The gender -->
        <TextView
            android:id="@+id/getGender"
            style="@style/getGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getPhoneNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Bottom design   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/bottom_background"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_container" />
</androidx.constraintlayout.widget.ConstraintLayout>